--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,14 @@
     box-sizing: border-box;
 }
 
+/* General Styles */
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* Generic project styles */
+    color: #3a3a3a;
+}
 
 /* header */
 header {
@@ -13,6 +21,8 @@ header {
 /* main content */
 main {
     background-color: lightblue;
+    /* Make main element take up any surplus space to push footer down */
+    flex: 1 0 auto;
 }
 /* footer */
 footer {
