--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,12 +16,16 @@ body {
     flex-direction: column;
     /* Generic project styles */
     color: #3a3a3a;
-    font-family: 'lato' , sans-serif;
+    font-family: 'Lato' , sans-serif;
 }
 
 /* header */
 header {
     background-color: lightcoral;
+}
+/* ändrat i denna rad jämfört med guiden ska bara stå egentligen h1 då jag osäker om det blev rätt i fonten */
+h1 {
+    font-family: 'Oswald', sans-serif;
 }
 /* main content */
 main {
