Add hover effecy on large screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,24 @@
-/* Google fonts import /*
-
+/* Google fonts import */
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');
 
-/* Asterisk wildcard selector to override deafault styles added by the browser */
+/* Asterisk wildcard selector to override default styles added by the browser */
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-/* General Styles */
+/* General styles */
 body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     /* Generic project styles */
     color: #3a3a3a;
-    font-family: 'Lato' , sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
-/* header */
+/* Header */
 header {
     background-color: #ffffff;
     padding: 0 1rem;
@@ -83,20 +82,20 @@ nav {
     font-size: 2rem;
 }
 
-/* main content */
+/* Main content */
 main {
     background-color: lightblue;
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
 }
-/* footer */
+
+/* Footer */
 footer {
     background-color: orange;
 }
 
 /* Media query: tablets and larger (768px and up) */
-
 @media screen and (min-width: 768px) {
     /* Header */
     nav {
@@ -106,6 +105,7 @@ footer {
         width: fit-content;
         padding-right: 1rem;
     }
+    
     #menu {
         display: flex;
     }
@@ -129,4 +129,11 @@ footer {
         /* Push main content down to accommodate larger header */
         margin-top: 79px;
     }
-}    
+}
+
+/* Large devices (laptops and desktops, 992px and up) */
+@media screen and (min-width: 992px) {
+    #menu a:hover{
+        border-bottom: 1px solid #3a3a3a;
+    }
+}
